<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <groupId>edu.stanford.swrl</groupId>
  <artifactId>swrlapi-drools-engine</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>bundle</packaging>
  <name>Drools-based SWRL Rule Engine</name>
  <description>Drools implementation of SWRLAPI-based SWRL rule engine</description>

  <properties>

    <java.version>1.8</java.version>
    <owlapi.version>4.1.0-RC2</owlapi.version> 
    <swrlapi.version>1.0.0-SNAPSHOT</swrlapi.version>
    <drools.version>6.2.0.Final</drools.version> 
    <commons.discovery.osgi.version>0.4_1</commons.discovery.osgi.version>

    <checker.framework.version>1.7.5</checker.framework.version>
    <slf4j.version>1.6.1</slf4j.version>
    <junit.version>4.11</junit.version>

    <maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
    <maven.bundle.plugin.version>2.4.0</maven.bundle.plugin.version>
    <maven.source.plugin.version>2.2.1</maven.source.plugin.version>
    <maven.javadoc.plugin.version>2.9.1</maven.javadoc.plugin.version>
    <maven.gpg.plugin.version>1.5</maven.gpg.plugin.version>
    
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

  </properties>

  <developers>
    <developer>
      <name>Martin O'Connor</name>
      <email>martin.oconnor@stanford.edu</email>
      <organization>Stanford Center for Biomedical Informatics Research</organization>
      <organizationUrl>http://bmir.stanford.edu</organizationUrl>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>BSD 2-Clause License</name>
      <url>http://opensource.org/licenses/BSD-2-Clause</url>
    </license>
  </licenses>  

  <!-- SWRLAPI libraries are hosted on Sonatype OSSRH (OSS Repository Hosting Service). -->
  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <scm>
    <connection>scm:git:git@github.com:protegeproject/swrlapi-drools-engine.git</connection>
    <developerConnection>scm:git:git@github.com:protegeproject/swrlapi-drools-engine.git</developerConnection>
    <url>https://github.com/protegeproject/swrlapi</url>
    <tag>HEAD</tag>
  </scm>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/protegeproject/swrlapi-drools-engine/issues</url>
  </issueManagement>

  <dependencies>

    <dependency>
      <groupId>net.sourceforge.owlapi</groupId>
      <artifactId>owlapi-osgidistribution</artifactId>
      <version>${owlapi.version}</version>
    </dependency>

    <dependency>
      <groupId>edu.stanford.swrl</groupId>
      <artifactId>swrlapi</artifactId>
      <version>${swrlapi.version}</version>
    </dependency>

    <!-- Start of Drools dependencies -->

    <dependency>
      <groupId>org.drools</groupId>
      <artifactId>drools-osgi-integration</artifactId>
      <version>${drools.version}</version>
    </dependency>

    <!-- The SWRLAPI-based Drools engine uses the Drools 5 API.  -->
    <!-- The knowledge-api provides an adapter from the Drools 5 -->
    <!-- API to the Drools 6 KIE implementation.                 -->
    <dependency>
      <groupId>org.drools</groupId>
      <artifactId>knowledge-api</artifactId>
      <version>${drools.version}</version>
    </dependency>

    <!-- End of Drools dependencies -->

    <!-- OSGi Bundle for Apache Commons Discovery 0.4  -->
    <dependency>
      <groupId>org.apache.geronimo.bundles</groupId>
      <artifactId>commons-discovery</artifactId>
      <version>${commons.discovery.osgi.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>edu.washington.cs.types.checker</groupId>
      <artifactId>checker-framework</artifactId>
      <version>${checker.framework.version}</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>${slf4j.version}</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>

    <plugins>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>

      <plugin>   
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>${maven.bundle.plugin.version}</version>
        <extensions>true</extensions>

        <configuration>

          <instructions>
            <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
            <Include-Resource>{maven-resources}</Include-Resource>
            <Import-Package>
              org.drools.*;version="6.2.0.Final",
              org.semanticweb.owlapi.*;version="4.0.2",
              org.swrlapi.*;version="1.0.6",
              *
            </Import-Package>
            <Export-Package>
              org.swrlapi.drools;version="1.0.6"
            </Export-Package>
          </instructions>
        </configuration>

        <executions>
          <execution>
            <id>bundle-manifest</id>
            <phase>process-classes</phase>
            <goals>    
              <goal>manifest</goal>
            </goals>   
          </execution>
        </executions>

      </plugin>

      <plugin>
	<artifactId>maven-release-plugin</artifactId>
	<version>2.5</version>
	<dependencies>
	  <dependency>
	    <groupId>org.apache.maven.scm</groupId>
	    <artifactId>maven-scm-provider-gitexe</artifactId>
	    <version>1.9</version>
	  </dependency>
	</dependencies>
      </plugin>

      <plugin>
	<groupId>edu.washington.cs.types.checker</groupId>
	<artifactId>checker-maven-plugin</artifactId>
        <version>${checker.framework.version}</version>

        <executions>
          <execution>
            <phase>deploy</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>

        <configuration>
          <processors>
            <processor>checkers.nullness.NullnessChecker</processor>
            <processor>checkers.interning.InterningChecker</processor>
          </processors>
        </configuration>
      </plugin>

    </plugins>

  </build>

  <profiles>
    <profile>
      <id>prepare-release</id>
      <activation>
	<activeByDefault>false</activeByDefault>
      </activation>
      <build>
	<plugins>
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-source-plugin</artifactId>
            <version>${maven.source.plugin.version}</version>
	    <executions>
	      <execution>
		<id>attach-sources</id>
		<goals>
		  <goal>jar</goal>
		</goals>
	      </execution>
	    </executions>
	  </plugin>
	  
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-javadoc-plugin</artifactId>
	    <version>${maven.javadoc.plugin.version}</version>
	    <executions>
	      <execution>
		<id>attach-javadocs</id>
		<goals>
		  <goal>jar</goal>
		</goals>
		<configuration>
		  <failOnError>false</failOnError>
		  <quiet>true</quiet>
		</configuration>
	      </execution>
	    </executions>
	  </plugin>
	  
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-gpg-plugin</artifactId>
	    <version>${maven.gpg.plugin.version}</version>
	    <executions>
	      <execution>
		<id>sign-artifacts</id>
		<phase>verify</phase>
		<goals>
		  <goal>sign</goal>
		</goals>
	      </execution>
	    </executions>
	  </plugin>
	</plugins>
      </build>
    </profile>
  </profiles>

</project>
